<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:id="@+id/postViewLinearLayoutAll"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:isScrollContainer="true"
              android:orientation="vertical">

    <TextView
        android:id="@+id/posterProfileName"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:layout_weight="0.00"
        android:contentDescription="@string/user_name_description"
        tools:drawableLeft="@drawable/com_facebook_profile_picture_blank_square"
        tools:text="Mwakima Matano"/>

    <ImageView
        android:id="@+id/postImageView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.01"
        android:contentDescription="@string/image_post_describtion"
        android:minHeight="219dp"
        tools:srcCompat="@android:drawable/ic_menu_report_image"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="100dp"
        android:layout_marginStart="100dp"
        android:layout_weight="0.00"
        android:orientation="horizontal">

        <ImageButton
            android:id="@+id/likeImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/like_image"
            app:srcCompat="@android:drawable/star_off"/>

        <ImageButton
            android:id="@+id/shareImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/share_description"
            app:srcCompat="@android:drawable/ic_menu_share"/>

        <ImageButton
            android:id="@+id/saveImageButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save_desc"
            app:srcCompat="@android:drawable/ic_menu_save"/>
    </LinearLayout>

    <TextView
        android:id="@+id/post_text_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginTop="5dp"
        android:layout_weight="0.01"
        android:fadeScrollbars="true"
        android:isScrollContainer="false"
        android:maxHeight="153dp"
        android:minHeight="3dp"
        android:scrollIndicators="right"
        android:scrollbarFadeDuration="?android:attr/scrollbarFadeDuration"
        android:scrollbarSize="?android:attr/scrollbarSize"
        android:scrollbars="vertical"
        android:textAlignment="textStart"
        tools:targetApi="m"
        tools:text="@string/lorae_ipsum_text"/>
</LinearLayout>