<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools"
                                             android:orientation="vertical"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="336dp"
        android:layout_height="107dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="fill_horizontal|center"
        android:orientation="horizontal"
        android:weightSum="0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/user_profile_pic"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_weight="0.50"
            android:contentDescription="@string/user_profile_image"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.055"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.047"
            app:srcCompat="@android:drawable/sym_def_app_icon"/>

        <TextView
            android:id="@+id/userNameTextView"
            android:layout_width="160dp"
            android:layout_height="38dp"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center_horizontal"
            android:hint="UserProfile Name"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textSize="18sp"
            android:typeface="normal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintHorizontal_bias="0.582"
            app:layout_constraintLeft_toRightOf="@+id/user_profile_pic"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.073"
            tools:ignore="HardcodedText"
            tools:text="Matano"/>

    </LinearLayout>

    <TextView
        android:id="@+id/statusTextView"
        android:layout_width="348dp"
        android:layout_height="51dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_weight="1"
        android:hint="@string/no_status_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.055"
        tools:text="Hello Am Great"/>

    <LinearLayout
        android:layout_width="346dp"
        android:layout_height="92dp"
        android:orientation="vertical"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/statusTextView"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintVertical_bias="0.077"
        android:id="@+id/linearLayout2">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userFollowerImageView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/followers_button_text"
                app:srcCompat="@android:drawable/btn_star_big_on"/>

            <TextView
                android:id="@+id/followersCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.10"
                android:hint="0"
                android:textAlignment="center"
                android:textColor="?attr/colorPrimary"
                tools:ignore="HardcodedText"
                tools:text="1255216"/>

            <TextView
                android:id="@+id/followers_text_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.33"
                android:text="@string/followers_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="5dp"
            android:layout_marginStart="5dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/userFollowingImageView"
                android:layout_width="wrap_content"
                android:layout_height="22dp"
                android:contentDescription="@string/following_button_text"
                app:srcCompat="@android:drawable/btn_star"/>

            <TextView
                android:id="@+id/followingCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.08"
                android:hint="0"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                tools:ignore="HardcodedText"
                tools:text="50000000"/>

            <TextView
                android:id="@+id/followingTextTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_marginLeft="5dp"
                android:layout_weight="0.33"
                android:text="@string/following_text"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorPrimary"/>
        </LinearLayout>

    </LinearLayout>

</android.support.constraint.ConstraintLayout>