<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/profilePicEditImageView"
        android:layout_width="214dp"
        android:layout_height="236dp"
        android:layout_marginEnd="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/edit_profile_image_desc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/com_facebook_profile_picture_blank_portrait"
        tools:layout_editor_absoluteX="66dp"/>

    <EditText
        android:id="@+id/userNameEditText"
        style="@style/Widget.AppCompat.EditText"
        android:layout_width="260dp"
        android:layout_height="40dp"
        android:layout_marginTop="39dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintHorizontal_bias="0.56"
        app:layout_constraintLeft_toRightOf="@+id/textView2"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profilePicEditImageView"/>


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="44dp"
        android:layout_marginTop="0dp"
        android:paddingTop="10dp"
        android:text="@string/user_name_text"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintRight_toLeftOf="@+id/userNameEditText"
        app:layout_constraintTop_toTopOf="@+id/userNameEditText"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintHorizontal_bias="0.19"/>

    <TextView
        android:layout_width="66dp"
        android:layout_height="41dp"
        android:paddingTop="10dp"
        android:text="@string/status_textview_text"
        android:textAlignment="center"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/userStatusEditText"
        android:id="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/userStatusEditText"
        android:layout_marginTop="8dp"
        app:layout_constraintHorizontal_bias="0.18"/>



    <EditText
        android:id="@+id/userStatusEditText"
        android:layout_width="264dp"
        android:layout_height="77dp"
        android:layout_marginTop="29dp"
        android:ems="10"
        android:inputType="textMultiLine"
        app:layout_constraintHorizontal_bias="0.53"
        app:layout_constraintLeft_toRightOf="@+id/textView4"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userNameEditText"
        />

    <Button
        android:id="@+id/saveButtonEditFrag"
        android:layout_width="108dp"
        android:layout_height="50dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="25dp"
        android:text="@string/button_text_save"
        app:layout_constraintHorizontal_bias="0.508"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/userStatusEditText"/>


</android.support.constraint.ConstraintLayout>